# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml
mcp/mcp_observability/: __init__.py  server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
nanobot/workspace/memory/: HISTORY.md  MEMORY.md
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
